@@ -1,5 +1,12 @@
 2007-05-27  Wakaba  <wakaba@suika.fam.cx>
 
+	* ContentChecker.pm (html): Set |is_root| (allowed
+	as a document element) flag on.
+	(new): Removed.
+	(check_document): New method.
+
+2007-05-27  Wakaba  <wakaba@suika.fam.cx>
+
 	* ContentChecker.pm (thead, tfoot): Checker specifications
 	were incorrect.
 
